// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`moveTile 가로 8 8 4 4 y=-1 1`] = `
Array [
  Object {
    "value": 8,
    "x": 1,
    "y": 1,
  },
  Object {
    "value": 8,
    "x": 2,
    "y": 1,
  },
  Object {
    "value": 4,
    "x": 3,
    "y": 1,
  },
  Object {
    "value": 4,
    "x": 4,
    "y": 1,
  },
]
`;

exports[`moveTile 가로 8 8 4 4 y=1 1`] = `
Array [
  Object {
    "value": 8,
    "x": 1,
    "y": 4,
  },
  Object {
    "value": 8,
    "x": 2,
    "y": 4,
  },
  Object {
    "value": 4,
    "x": 3,
    "y": 4,
  },
  Object {
    "value": 4,
    "x": 4,
    "y": 4,
  },
]
`;

exports[`moveTile 세로 8 8 4 4 x=-1 1`] = `
Array [
  Object {
    "value": 8,
    "x": 1,
    "y": 1,
  },
  Object {
    "value": 8,
    "x": 1,
    "y": 2,
  },
  Object {
    "value": 4,
    "x": 1,
    "y": 3,
  },
  Object {
    "value": 4,
    "x": 1,
    "y": 4,
  },
]
`;

exports[`moveTile 세로 8 8 4 4 x=1 1`] = `
Array [
  Object {
    "value": 8,
    "x": 4,
    "y": 1,
  },
  Object {
    "value": 8,
    "x": 4,
    "y": 2,
  },
  Object {
    "value": 4,
    "x": 4,
    "y": 3,
  },
  Object {
    "value": 4,
    "x": 4,
    "y": 4,
  },
]
`;
